# trend-lab-repo-scam-shield-260617

./: README.md  pyproject.toml
src/repo_scam_shield/: main.py
tests/: test_smoke.py
