[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "repo-scam-shield"
version = "0.1.0"
description = "Tiny heuristic scamware risk scanner for GitHub repos and install scripts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Repo Scam Shield Contributors" }]
dependencies = []

[project.scripts]
repo-scam-shield = "repo_scam_shield.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/repo_scam_shield"]
